# MC-Cluster

./: .gitignore  Cargo.toml  README.md  home_rust_cluster_run.sh  inspect_mc_trajectory.py  start_multiple_rust_sim.sh
example_data/: cn_input_example.json
src/: energy.rs  energy_change.rs  grid_structure.rs  lib.rs  listdict.rs  main.rs  read_and_write.rs  read_files.rs  results.rs  setup.rs  sim.rs  sim_struct.rs
